--- a/LeaveManagement/LeaveManagement.vcxproj.filters
+++ b/LeaveManagement/LeaveManagement.vcxproj.filters
@@ -21,12 +21,21 @@
     <ClCompile Include="CompanyPanelForm.cpp">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="AttendenceForm.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CompanyPanelForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AttendenceForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Employee.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
