--- a/LeaveManagement/LeaveManagement.vcxproj.filters
+++ b/LeaveManagement/LeaveManagement.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="AttendenceForm.cpp">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="TimeUserControl.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
@@ -36,6 +39,24 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Employee.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MyTime.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TimeUserControl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ITimeObserver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ITimeObservable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Company.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EmployeeRegister.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
